[project]
name = "netlist"
version = "0.1.0"
description = "generate netlist"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["protobuf>=6.30.2"]

[project.optional-dependencies]
network = ["aggregate-prefixes>=0.7.2"]

[tool.setuptools]
py-modules = []

[tool.ruff.format]
quote-style = "single"
